# mesh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: on-push.yaml
client/: Cargo.toml
client/src/: acl.rs  device.rs  inbound.rs  main.rs  outbound.rs  ping.rs  route.rs  ssh.rs
server/: Cargo.toml
shared/: Cargo.toml  build.rs
shared/protos/: message.proto
shared/src/: lib.rs
