[package]
edition = "2021"
name = "mesh-server"
version = "0.0.1"
authors = []

[[bin]]
name = "mesh-server"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
tokio = "1.20"
tokio-util = "0.7"
futures = "0.3"
bytes = "1.2"
log = "0.4"
env_logger = "0.9"
flexi_logger = { version = "0.23", features = ["async", "use_chrono_for_offset"] }